(lang dune 3.15)

(name task_pool_demo)

(generate_opam_files true)

(source
 (github kimierik/ocaml_task_queue))

(authors "kimierik")

(maintainers "kimierik")

(license LICENSE)

(documentation https://url/to/documentation)


; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
